@@ -2799,6 +2799,8 @@ void toggle_fullscreen() {
 	}
 }
 
+bool ignore_tab = false;
+
 void process_events() {
 	// Process all events in the queue.
 	// Previously, this procedure would wait for *one* event and process it, then return.
@@ -2860,7 +2862,11 @@ void process_events() {
 						case SDL_SCANCODE_VOLUMEDOWN:
 						case SDL_SCANCODE_PAUSE:
 							break;
+
 						default:
+							// If Alt is held down from Alt+Tab: ignore it until it's released.
+							if (scancode == SDL_SCANCODE_TAB && ignore_tab) break;
+
 							last_key_scancode = scancode;
 							if (modifier & KMOD_SHIFT) last_key_scancode |= WITH_SHIFT;
 							if (modifier & KMOD_CTRL ) last_key_scancode |= WITH_CTRL ;
@@ -2896,6 +2902,9 @@ void process_events() {
 				break;
 			}
 			case SDL_KEYUP:
+				// If Alt was held down from Alt+Tab but now it's released: stop ignoring Tab.
+				if (event.key.keysym.scancode == SDL_SCANCODE_TAB && ignore_tab) ignore_tab = false;
+
 				key_states[event.key.keysym.scancode] = 0;
 #ifdef USE_MENU
 				// Prevent repeated keystrokes opening/closing the menu as long as the key is held down.
@@ -3027,6 +3036,14 @@ void process_events() {
 						window_resized();
 						update_screen();
 						break;
+
+					case SDL_WINDOWEVENT_FOCUS_GAINED:
+					// Fix for this bug: When playing back a recording, Alt+Tabbing back to SDLPoP stops the replay if Alt is released before Tab.
+					{ // If Alt is held down from Alt+Tab: ignore it until it's released.
+						const Uint8 *state = SDL_GetKeyboardState(NULL);
+						if (state[SDL_SCANCODE_TAB]) ignore_tab = true;
+					}
+					break;
 				}
 				break;
 			case SDL_USEREVENT:
